# hla-mapper

./: LICENSE  README.md  hla-mapper.yml
database/hla-mapper_db_004.3_HLA/bed/: not_target_rna.bed  select_dna.bed  select_rna.bed  target_dna.bed  target_rna.bed
src/: CMakeLists.txt  ThreadPool.hpp  external.hpp  functions.cpp  functions.hpp  main.cpp  map_dna.cpp  map_dna.hpp  map_rna.cpp  map_rna.hpp  preselect.cpp  preselect.hpp  setup.cpp  setup.hpp  typing.cpp  typing.hpp
test_sequences/: HG01890_HLA-A.bam  HG01890_HLA-A.bam.bai  HG01890_HLA-A_R1.fastq  HG01890_HLA-A_R2.fastq  README.md
